--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
       <footer class="footer">
-        Made with ❤️ in Connecticut.
+        Made with ❤️ in New Delhi.
       </footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
